--- a/frontend/vue-ecom-app/index.html
+++ b/frontend/vue-ecom-app/index.html
@@ -22,6 +22,8 @@
       href="./src/assets/bootstrap-5.0.2-dist/css/bootstrap.min.css"
     />
     <script type="module" src="./src/assets/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
     <title>Ecom App</title>
   </head>
@@ -30,6 +32,5 @@
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/js/toastr.js"></script>
-
   </body>
 </html>
