Setup the the home page

--- a/frontend/vue-ecom-app/index.html
+++ b/frontend/vue-ecom-app/index.html
@@ -29,7 +29,9 @@
   </head>
   <body>
     
-    <div id="app"></div>
+    <div id="app">
+      <application></application>
+    </div>
     <script type="module" src="/src/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/js/toastr.js"></script>
   </body>
